tests/fail/unsupported_foreign_function.stderr
error: unsupported operation: can't call foreign function: foo; try specifying a shared object file with the flag -Zmiri-external_c_so_file=path/to/SOfile
  --> $DIR/unsupported_foreign_function.rs:LL:CC
   |
LL |         foo();
   |         ^^^^^ can't call foreign function: foo; try specifying a shared object file with the flag -Zmiri-external_c_so_file=path/to/SOfile
   |
   = help: this is likely not a bug in the program; it indicates that the program performed an operation that the interpreter does not support
   = note: backtrace:
   = note: inside `main` at $DIR/unsupported_foreign_function.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

